--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "he-profiler-sys"
 version = "0.1.0"
 authors = ["Connor Imes <connor.k.imes@gmail.com>"]
 description = "FFI bindings to he-profiler"
-license = "MIT OR Apache-2.0"
+license = "MIT/Apache-2.0"
 homepage = "https://github.com/connorimes/he-profiler-sys"
 repository = "https://github.com/connorimes/he-profiler-sys"
 keywords = ["heartbeats", "energymon", "profiler", "timing", "performance", "energy", "power", "bindings"]
